force-app/main/default/objects/AdminTool_DeploymentBackup__c/AdminTool_DeploymentBackup__c.object-meta.xml
<CustomObject>
    <description>Stores target metadata backup packages captured before SF Admin Hub deployments for rollback restore.</description>
    <label>Admin Tool Deployment Backup</label>
    <nameField>
        <displayFormat>BK-{000000}</displayFormat>
        <label>Deployment Backup Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Admin Tool Deployment Backups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>