force-app/main/default/objects/AdminTool_DeploymentBackup__c/fields/BackupStatus__c.field-meta.xml
<CustomField>
    <fullName>BackupStatus__c</fullName>
    <label>Backup Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Retrieving</fullName>
                <default>true</default>
                <label>Retrieving</label>
            </value>
            <value>
                <fullName>Available</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>Restore Deploying</fullName>
            </value>
            <value>
                <fullName>Restore Succeeded</fullName>
            </value>
            <value>
                <fullName>Restore Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>