force-app/main/default/objects/AdminTool_DeploymentBackup__c/fields/BackupZipBase64__c.field-meta.xml
<CustomField>
    <fullName>BackupZipBase64__c</fullName>
    <label>Backup ZIP Base64</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>