force-app/main/default/objects/AdminTool_DeploymentBackup__c/fields/ComponentCount__c.field-meta.xml
<CustomField>
    <fullName>ComponentCount__c</fullName>
    <label>Component Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>