force-app/main/default/objects/AdminTool_DeploymentBackup__c/fields/DeploymentJobId__c.field-meta.xml
<CustomField>
    <fullName>DeploymentJobId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Deployment Job</label>
    <referenceTo>AdminTool_DeploymentJob__c</referenceTo>
    <relationshipLabel>Deployment Backups</relationshipLabel>
    <relationshipName>DeploymentBackups</relationshipName>
    <type>Lookup</type>
</CustomField>