force-app/main/default/objects/AdminTool_DeploymentBackup__c/fields/MetadataTypes__c.field-meta.xml
<CustomField>
    <fullName>MetadataTypes__c</fullName>
    <label>Metadata Types</label>
    <length>255</length>
    <type>Text</type>
</CustomField>