force-app/main/default/objects/AdminTool_DeploymentBackup__c/fields/RestoreDeployId__c.field-meta.xml
<CustomField>
    <fullName>RestoreDeployId__c</fullName>
    <label>Restore Deploy Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>