force-app/main/default/objects/AdminTool_DeploymentBackup__c/fields/RetrieveId__c.field-meta.xml
<CustomField>
    <fullName>RetrieveId__c</fullName>
    <label>Retrieve Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>