force-app/main/default/objects/AdminTool_DeploymentBackup__c/fields/TargetUsername__c.field-meta.xml
<CustomField>
    <fullName>TargetUsername__c</fullName>
    <label>Target Username</label>
    <length>255</length>
    <type>Text</type>
</CustomField>